[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Ball/RigidBall.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Game.gd" type="Script" id=3]
[ext_resource path="res://src/BallRelease.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 595, 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="BallSpawn" type="Position2D" parent="."]
position = Vector2( 212, 194 )

[node name="BallRelease" type="StaticBody2D" parent="BallSpawn"]
position = Vector2( 0, 38.055 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallSpawn/BallRelease"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="BallSpawn/BallRelease"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="RigidBall" parent="." instance=ExtResource( 1 )]
position = Vector2( 212, 194 )
mass = 20.0

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 488, 591 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 2 )

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2( 1.61438, 61.6999 )
rotation = 1.5708
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
shape = SubResource( 2 )

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2( 1023.14, 70.8032 )
rotation = 1.5708
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 324.826, 407.573 )
